--- a/Views/DynamicTabItem.xaml
+++ b/Views/DynamicTabItem.xaml
@@ -1,8 +1,7 @@
 ﻿<UserControl xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TestXamlReader.Views"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
 
@@ -12,5 +11,9 @@
 
     <StackPanel Margin="20">
         <Button Content="ランダムに値を設定" Command="{Binding ButtonRandomClickedCommand}" />
+        <StackPanel Orientation="Horizontal" >
+            <Label Content="ランダム：" />
+            <Label Content="{Binding RandomValue}" />
+        </StackPanel>
     </StackPanel>
 </UserControl>
