--- a/Views/DynamicTabItem.xaml
+++ b/Views/DynamicTabItem.xaml
@@ -1,6 +1,7 @@
 ﻿<UserControl xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:vm="clr-namespace:TestXamlReader.ViewModels;assembly=TestXamlReader"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
@@ -8,6 +9,10 @@
     <!-- ビルドアクションを「埋め込みリソース」にする -->
     <!-- 紐付いている xaml.cs は削除する -->
     <!-- x:Class の記述を削除する -->
+
+    <UserControl.DataContext>
+        <vm:DynamicTabItemViewModel />
+    </UserControl.DataContext>
 
     <StackPanel Margin="20">
         <Button Content="ランダムに値を設定" Command="{Binding ButtonRandomClickedCommand}" />
