--- a/Views/DynamicTabItem.xaml
+++ b/Views/DynamicTabItem.xaml
@@ -1,5 +1,6 @@
 ﻿<UserControl xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:dd="clr-namespace:GongSolutions.Wpf.DragDrop;assembly=GongSolutions.Wpf.DragDrop"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:vm="clr-namespace:TestXamlReader.ViewModels;assembly=TestXamlReader"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -20,5 +21,6 @@
             <Label Content="ランダム：" />
             <Label Content="{Binding RandomValue}" />
         </StackPanel>
+        <ListBox ItemsSource="{Binding ListItems}" Height="150" ScrollViewer.VerticalScrollBarVisibility="Visible" dd:DragDrop.IsDragSource="True" dd:DragDrop.IsDropTarget="True" dd:DragDrop.UseDefaultDragAdorner="True" d:ItemsSource="{d:SampleData ItemCount=5}" />
     </StackPanel>
 </UserControl>
